[Bugfix] Overflow of sidebar in full height views of discussion forum (#3401)
* Fix overflow of sidebar

* Remove legacy way and tweaks

* tweaks

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -1033,6 +1033,13 @@ table .instructor .two-options{
     padding-top: 30px;
 }
 
+div.full_height {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    max-height: 95vh;
+    top: 10px;
+}
+
 #sidebar.collapsed #nav-buttons {
     width: 30px;
 }
